--- a/.styleci.yml
+++ b/.styleci.yml
@@ -9,4 +9,9 @@ js:
   finder:
     not-name:
       - webpack.mix.js
+      - mix.js("resources/js/app.js", "public/js")
+    .postCss("resources/css/app.css", "public/css", [
+      require("tailwindcss"),
+  ]);
 css: true
+
