--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
         "alpinejs": "^3.0.6",
         "autoprefixer": "^10.4.7",
         "axios": "^0.25",
+        "browser-sync": "^2.27.10",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.3"
+    },
+    "dependencies": {
+        "watch": "^1.0.2"
     }
 }
