--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ APP_NAME=ajfero-invoicesapp
 APP_ENV=production
 APP_KEY=base64:f+iVkPxpnGZHhg0OL6waDfUftXqUjV4OWyeB+ZejX/c=
 APP_DEBUG=true
-APP_URL=http:https://ajfero-invoicesapp.herokuapp.com/
+APP_URL=https://ajfero-invoicesapp.herokuapp.com/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
