update; Fix styles and upgrade text into Readme, Dashboard for content explicite about the app.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+# Modificaciones
+# Se elmina la carpeta .env para enviar las variables de entorno al desarrollo
+#
