--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=bb6887a1d34081960564b79359d1313b",
-    "/css/app.css": "/css/app.css?id=412e81f2b3c235cb55b336dbc5e0d4f1"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
