--- a/.env
+++ b/.env
@@ -70,25 +70,36 @@ REDIS_PORT=6379
 # MAIL_FROM_ADDRESS="hello@example.com"
 # MAIL_FROM_NAME="${APP_NAME}"
 
-# Gmail.com
-    MAIL_DRIVER=smtp
-    MAIL_HOST=smtp.mailgun.org
-    MAIL_PORT=587
-    MAIL_USERNAME=postmaster@sandbox54887036f8d64d589535b7cf182e57c4.mailgun.org
-    MAIL_PASSWORD=f6ca10c9bb75e4f232a73fa9f9072e49-4f207195-33420418
-    MAIL_ENCRYPTION=SSL
-    MAIL_FROM_ADDRESS=ajfeo.dev@gmail.com
-    MAIL_FROM_NAME="${APP_NAME}"
+# Mailgun -> Pasarela de pago
+# MAIL_DRIVER=smtp
+# MAIL_HOST=smtp.mailgun.org
+# MAIL_PORT=587
+# MAIL_USERNAME=postmaster@sandbox54887036f8d64d589535b7cf182e57c4.mailgun.org
+# MAIL_PASSWORD=f6ca10c9bb75e4f232a73fa9f9072e49-4f207195-33420418
+# MAIL_ENCRYPTION=SSL
+# MAIL_FROM_ADDRESS=ajfeo.dev@gmail.com
+# MAIL_FROM_NAME="${APP_NAME}"
 
-# Mail Trap
-    # MAIL_MAILER=smtp
-    # MAIL_HOST=smtp.mailtrap.io
-    # MAIL_PORT=2525
-    # MAIL_USERNAME=e0e0f50a945487
-    # MAIL_PASSWORD=9bc04ff6cd4c09
-    # MAIL_ENCRYPTION=tls
-    # MAIL_FROM_ADDRESS="contact@ajfero.com"
-    # MAIL_FROM_NAME="${APP_NAME}"
+# MailTrap -> Pasarela receptora de mails.
+# MAIL_MAILER=smtp
+# MAIL_HOST=smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=e0e0f50a945487
+# MAIL_PASSWORD=9bc04ff6cd4c09
+# MAIL_ENCRYPTION=tls
+# MAIL_FROM_ADDRESS="contact@ajfero.com"
+# MAIL_FROM_NAME="${APP_NAME}"
+
+# sendinblue
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp-relay.sendinblue.com
+MAIL_PORT=587
+MAIL_USERNAME=ing.ajfernandez@gmail.com
+MAIL_PASSWORD=TEkarv9LYXm3COtS
+MAIL_ENCRYPTION=SSL
+MAIL_FROM_ADDRESS=ajfero.dev@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
