--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@
 # APP_DEBUG=true
 # APP_URL=https://ajfero-invoicesapp.herokuapp.com/
 
-APP_NAME=ajfero-invoicesapp
+APP_NAME=invoicesApp
 APP_ENV=production
 APP_KEY=base64:f+iVkPxpnGZHhg0OL6waDfUftXqUjV4OWyeB+ZejX/c=
 APP_DEBUG=true
